# oMLet

./: pairing.md  tasks.md
OMLet/lib/: anf.ml  anf.mli  anfPrettyPrinter.ml  ast.ml  boxing.c  boxing.h  codegen.ml  codegenTypes.ml  codegenTypes.mli  gc.c  gc.h  keywordChecker.ml  parser.ml  prettyPrinter.ml  prettyPrinter.mli  runtime.c  treeAnalysis.ml  typedTree.ml  typesPp.ml
OMLet/many_tests/typed/: build_and_run.sh
OMLet/many_tests/typed/fac_anf_exit_code/: dune
OMLet/many_tests/typed/fac_anf_print/: dune  fac_anf_print_test.t
OMLet/many_tests/typed/fac_ll_cc/: dune  fac_cc_ll_test.t
OMLet/many_tests/typed/fac_partial_appl/: dune  fac_partial_appl_test.t
OMLet/many_tests/typed/fac_print/: dune  fac_print_test.t
PudgeWithMoML/: .gitignore  Makefile
PudgeWithMoML/lib/frontend/: ast.ml  inferencer.ml
PudgeWithMoML/lib/middle_end/: CC.ml
PudgeWithMoML/lib/riscv/: codegen.ml  machine.ml
PudgeWithMoML/lib/runtime/: .clang-format  runtime.c  runtime.h  runtime_test.c  test
PudgeWithMoML/test/: GC.t  codegen.t  dune
XML/lib/backend/: codegen.ml
XML/lib/middleend/: anf.ml
XML/many_tests/: anf.t  codegen.t  gc.t  ll.t
akaML/lib/inferencer/: inferencer.ml  inferencer.mli
akaML/lib/middleend/: anf_core.ml  anf_core.mli  anf_pprinter.ml  closure_conversion.ml
akaML/lib/ricsv/: codegen.ml  codegen.mli  machine.ml  machine.mli
akaML/lib/runtime/: .clang-format  dune  runtime.c
akaML/tests/: codegen.t  dparsetree.t  dune  inference.t  pipeline.t  test_anf.ml  test_riscv.ml
akaML/tests/fewtests/: 01faccps.ml  02facclos.ml  03clos.ml
(+35 files in other folders)
